Make auction end flow accept on-chain payments.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -11,39 +11,27 @@ services:
       interval: 3s
       timeout: 3s
       retries: 5
+    env_file: .env.dev
     environment:
-      - ENV=dev
       - BASE_URL=http://localhost:5000
-      - FLASK_APP=main
-      - FLASK_DEBUG=1
-      - DEBUG=1
-      - MOCK_LND=1
-      - MOCK_BTC=1
-      - MOCK_S3=1
-      - MOCK_TWITTER=1
-      - DB_USERNAME=pleb
-      - DB_PASSWORD=plebpass
-      - SQLALCHEMY_DISABLE_POOLING=1
     ports:
       - "5000:5000"
     volumes:
       - "./api:/app"
     command: bash -c "flask db upgrade && python3 ./main.py"
+  finalize-auctions:
+    depends_on:
+      api: # this is because in dev & test mode, the api is the one initializing the database, on start
+        condition: service_healthy
+    env_file: .env.dev
+    volumes:
+      - "./api:/app"
+    command: flask finalize-auctions
   settle-btc-payments:
     depends_on:
       api: # this is because in dev & test mode, the api is the one initializing the database, on start
         condition: service_healthy
-    environment:
-      - FLASK_APP=main
-      - FLASK_DEBUG=1
-      - DEBUG=1
-      - MOCK_LND=1
-      - MOCK_BTC=1
-      - MOCK_S3=1
-      - MOCK_TWITTER=1
-      - DB_USERNAME=pleb
-      - DB_PASSWORD=plebpass
-      - SQLALCHEMY_DISABLE_POOLING=1
+    env_file: .env.dev
     volumes:
       - "./api:/app"
     command: flask settle-btc-payments
@@ -51,17 +39,7 @@ services:
     depends_on:
       api: # this is because in dev & test mode, the api is the one initializing the database, on start
         condition: service_healthy
-    environment:
-      - FLASK_APP=main
-      - FLASK_DEBUG=1
-      - DEBUG=1
-      - MOCK_LND=1
-      - MOCK_BTC=1
-      - MOCK_S3=1
-      - MOCK_TWITTER=1
-      - DB_USERNAME=pleb
-      - DB_PASSWORD=plebpass
-      - SQLALCHEMY_DISABLE_POOLING=1
+    env_file: .env.dev
     volumes:
       - "./api:/app"
     command: flask settle-lnd-payments
@@ -69,17 +47,7 @@ services:
     depends_on:
       api: # this is because in dev & test mode, the api is the one initializing the database, on start
         condition: service_healthy
-    environment:
-      - FLASK_APP=main
-      - FLASK_DEBUG=1
-      - DEBUG=1
-      - MOCK_LND=1 # probably not needed
-      - MOCK_BTC=1 # probably not needed
-      - MOCK_S3=1 # probably not needed
-      - MOCK_TWITTER=1
-      - DB_USERNAME=pleb
-      - DB_PASSWORD=plebpass
-      - SQLALCHEMY_DISABLE_POOLING=1
+    env_file: .env.dev
     volumes:
       - "./api:/app"
     command: flask process-notifications
