--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,13 @@ services:
     networks:
       - db_network
       - proxy
+  finalize-auctions:
+    image: plebeianmarket-api
+    depends_on: [db]
+    restart: on-failure
+    stop_grace_period: 1m
+    networks:
+      - db_network
   settle-btc-payments:
     image: plebeianmarket-api
     depends_on: [db]
