--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,9 @@ services:
       - db_network
       - proxy
   finalize-auctions:
+    build:
+      context: ./
+      dockerfile: ./api/Dockerfile
     image: plebeianmarket-api
     depends_on: [db]
     restart: on-failure
@@ -26,6 +29,9 @@ services:
     networks:
       - db_network
   settle-btc-payments:
+    build:
+      context: ./
+      dockerfile: ./api/Dockerfile
     image: plebeianmarket-api
     depends_on: [db]
     restart: on-failure
@@ -33,6 +39,9 @@ services:
     networks:
       - db_network
   settle-lnd-payments:
+    build:
+      context: ./
+      dockerfile: ./api/Dockerfile
     image: plebeianmarket-api
     depends_on: [db]
     restart: on-failure
@@ -40,6 +49,9 @@ services:
     networks:
       - db_network
   process-notifications:
+    build:
+      context: ./
+      dockerfile: ./api/Dockerfile
     image: plebeianmarket-api
     depends_on: [db]
     restart: on-failure
