--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "svelte": ">=3.49.0",
     "svelte-check": "^2.2.6",
     "svelte-markdown": "^0.2.2",
+    "svelte-meta-tags": "^2.6.3",
     "svelte-toasts": "^1.1.2",
     "svelte-typewriter": "3.0.0-alpha.12",
     "tailwindcss": "3.0.24",
