--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,10 +1,12 @@
 FROM node:16-alpine AS builder
 
+ARG BUILD_MODE
+
 COPY ./web /web
 
 RUN cd /web \
  && npm install \
- && npm run build
+ && npm run build$BUILD_MODE
 
 FROM node:16-alpine
 
