Expose Postgres to host on devel environment to connect using the IDE

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -5,6 +5,8 @@ services:
     volumes:
       - target: /var/lib/postgresql/data
         type: tmpfs
+    ports:
+      - "5432:5432"
   api:
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:5000/api/healthcheck"]
