Pass WWW_BASE_URL to all processes using .env.

--- a/.env.staging
+++ b/.env.staging
@@ -2,3 +2,4 @@ ENV=staging
 FLASK_APP=main
 LOG_LEVEL=DEBUG
 LND_GRPC=plebeian-market.m.voltageapp.io:10009
+WWW_BASE_URL=https://staging.plebeian.market
