--- a/.env.test
+++ b/.env.test
@@ -11,3 +11,4 @@ DB_USERNAME=pleb
 DB_PASSWORD=plebpass
 SQLALCHEMY_DISABLE_POOLING=1
 BID_LAST_MINUTE_EXTEND=0
+WWW_BASE_URL=https://plebeian.market
