--- a/web/package.json
+++ b/web/package.json
@@ -2,8 +2,8 @@
   "name": "plebeianmarket-web",
   "version": "0.0.1",
   "devDependencies": {
-    "@sveltejs/adapter-node": "^1.0.0-next.73",
-    "@sveltejs/kit": "next",
+    "@sveltejs/adapter-node": "1.x",
+    "@sveltejs/kit": "1.x",
     "autoprefixer": "10.x",
     "btc2fiat": "*",
     "daisyui": "2.x",
@@ -12,14 +12,14 @@
     "npm-run-all": "4.x",
     "postcss": "8.x",
     "svelte": "3.x",
-    "svelte-check": "2.x",
+    "svelte-check": "3.x",
     "svelte-markdown": "0.x",
     "svelte-meta-tags": "^2.6.3",
     "svelte-toasts": "1.x",
     "svelte-typewriter": "3.x",
     "tailwindcss": "3.x",
     "typescript": "4.x",
-    "vite": "3.x"
+    "vite": "4.x"
   },
   "type": "module",
   "scripts": {
