Putting the site_name into an environment variable

--- a/web/.env
+++ b/web/.env
@@ -1,2 +1,3 @@
 VITE_TWITTER_USER=@PlebeianMarket
 VITE_PM_DESCRIPTION="Self-sovereign marketplace built on Bitcoin and Lightning"
+VITE_SITE_NAME="Plebeian Market"
