Nostr: give the option to fix the chatbox to the bottom of the screen

--- a/web/package.json
+++ b/web/package.json
@@ -2,26 +2,26 @@
   "name": "plebeianmarket-web",
   "version": "0.0.1",
   "devDependencies": {
-    "@playwright/test": "^1.29.2",
-    "@sveltejs/adapter-node": "1.x",
-    "@sveltejs/kit": "1.x",
+    "@playwright/test": "^1.30.0",
+    "@sveltejs/adapter-node": "^1.2.0",
+    "@sveltejs/kit": "^1.7.2",
     "autoprefixer": "10.x",
     "btc2fiat": "*",
-    "daisyui": "2.x",
-    "eslint": "8.x",
+    "daisyui": "^2.50.2",
+    "eslint": "^8.34.0",
     "eslint-plugin-svelte3": "4.x",
-    "nostr-tools": "^1.4.2",
+    "nostr-tools": "^1.5.0",
     "npm-run-all": "4.x",
     "postcss": "8.x",
     "svelte": "3.x",
-    "svelte-check": "3.x",
+    "svelte-check": "^3.0.3",
     "svelte-markdown": "0.x",
-    "svelte-meta-tags": "^2.6.3",
+    "svelte-meta-tags": "^2.6.5",
     "svelte-toasts": "1.x",
     "svelte-typewriter": "3.x",
-    "tailwindcss": "3.x",
-    "typescript": "4.x",
-    "vite": "4.x"
+    "tailwindcss": "^3.2.7",
+    "typescript": "^4.9.5",
+    "vite": "^4.1.3"
   },
   "type": "module",
   "scripts": {
