--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -12,6 +12,7 @@ flask-sqlalchemy
 gunicorn
 lnd-grpc-client>=0.3.41
 lnurl
+git+https://github.com/jeffthibault/python-nostr.git#egg=nostr
 psycopg2
 pycoin
 pyjwt
