--- a/web/package.json
+++ b/web/package.json
@@ -4,22 +4,22 @@
   "devDependencies": {
     "@playwright/test": "^1.30.0",
     "@sveltejs/adapter-node": "^1.2.0",
-    "@sveltejs/kit": "^1.7.2",
+    "@sveltejs/kit": "^1.15.1",
     "autoprefixer": "10.x",
     "btc2fiat": "*",
     "daisyui": "^2.51.4",
     "eslint": "^8.34.0",
     "eslint-plugin-svelte3": "4.x",
-    "nostr-tools": "^1.8.1",
+    "nostr-tools": "^1.8.2",
     "npm-run-all": "4.x",
     "postcss": "8.x",
-    "svelte": "3.x",
+    "svelte": "^3.58.0",
     "svelte-check": "^3.0.3",
     "svelte-markdown": "0.x",
     "svelte-meta-tags": "^2.6.5",
     "svelte-toasts": "1.x",
     "svelte-typewriter": "3.x",
-    "tailwindcss": "^3.2.7",
+    "tailwindcss": "^3.3.1",
     "typescript": "^4.9.5",
     "vite": "^4.1.3"
   },
