--- a/web/package.json
+++ b/web/package.json
@@ -4,24 +4,24 @@
   "devDependencies": {
     "@playwright/test": "^1.30.0",
     "@sveltejs/adapter-node": "^1.2.0",
-    "@sveltejs/kit": "^1.15.5",
+    "@sveltejs/kit": "^1.15.7",
     "autoprefixer": "10.x",
     "btc2fiat": "*",
     "daisyui": "^2.51.4",
-    "eslint": "^8.37.0",
+    "eslint": "^8.38.0",
     "eslint-plugin-svelte3": "4.x",
-    "nostr-tools": "^1.8.4",
+    "nostr-tools": "^1.10.0",
     "npm-run-all": "4.x",
-    "postcss": "8.x",
+    "postcss": "^8.4.23",
     "svelte": "^3.58.0",
     "svelte-check": "^3.2.0",
     "svelte-markdown": "0.x",
     "svelte-meta-tags": "^2.6.5",
     "svelte-toasts": "1.x",
-    "svelte-typewriter": "3.x",
+    "svelte-typewriter": "^3.1.5",
     "tailwindcss": "^3.3.1",
     "typescript": "^4.9.5",
-    "vite": "^4.1.3"
+    "vite": "^4.3.1"
   },
   "type": "module",
   "scripts": {
@@ -36,6 +36,9 @@
     "lint": "eslint --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@sveltejs/adapter-static": "^2.0.2",
+    "light-bolt11-decoder": "^3.0.0",
+    "svelte-qr": "^1.0.0",
     "uuid": "^9.0.0"
   }
 }
