Check out using Nostr.

--- a/.env.dev
+++ b/.env.dev
@@ -12,3 +12,4 @@ DB_USERNAME=pleb
 DB_PASSWORD=plebpass
 SQLALCHEMY_DISABLE_POOLING=1
 WWW_BASE_URL=http://localhost:5173
+API_BASE_URL=http://api:5000
