--- a/.env.prod
+++ b/.env.prod
@@ -3,3 +3,4 @@ FLASK_APP=main
 LOG_LEVEL=INFO
 LND_GRPC=plebeian-market.m.voltageapp.io:10009
 WWW_BASE_URL=https://plebeian.market
+API_BASE_URL=https://plebeian.market
