--- a/.env.staging
+++ b/.env.staging
@@ -1,5 +1,6 @@
 ENV=staging
 FLASK_APP=main
-LOG_LEVEL=DEBUG
+LOG_LEVEL=INFO
 LND_GRPC=plebeian-market.m.voltageapp.io:10009
 WWW_BASE_URL=https://staging.plebeian.market
+API_BASE_URL=https://staging.plebeian.market
