--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,9 +8,13 @@ services:
       args:
         - BUILD_MODE=-production
   api:
+    healthcheck:
+      test: ["CMD", "curl", "-f", "https://plebeian.market/api/healthcheck"]
+      interval: 3s
+      timeout: 3s
+      retries: 5
     env_file: .env.prod
     environment:
-      - BASE_URL=https://plebeian.market
       - S3_FILENAME_PREFIX=P_
       - MODERATOR_USER_IDS=1,5,328
   nginx:
@@ -24,4 +28,6 @@ services:
   settle-lnd-payments:
     env_file: .env.prod
   process-notifications:
+    env_file: .env.prod
+  birdwatcher:
     env_file: .env.prod
