Updating paths in Dockerfile

--- a/web/backoffice/Dockerfile
+++ b/web/backoffice/Dockerfile
@@ -4,16 +4,16 @@ ARG BUILD_MODE
 
 COPY ./web /web
 
-RUN cd /web \
+RUN cd /web/backoffice \
  && npm install \
  && npm run build$BUILD_MODE
 
 FROM node:16-alpine
 
 WORKDIR /app
-COPY --from=builder /web/build .
+COPY --from=builder /web/backoffice/build .
 COPY --from=builder /web/backoffice/package.json .
-COPY --from=builder /web/node_modules ./node_modules
+COPY --from=builder /web/backoffice/node_modules ./node_modules
 
 EXPOSE 3000
 CMD ["node", "index.js"]
