--- a/web/frontoffice/Dockerfile
+++ b/web/frontoffice/Dockerfile
@@ -11,9 +11,9 @@ RUN cd /web \
 FROM node:16-alpine
 
 WORKDIR /app
-COPY --from=builder /web/build .
-COPY --from=builder /web/package.json .
-COPY --from=builder /web/node_modules ./node_modules
+COPY --from=builder /web/frontoffice/build .
+COPY --from=builder /web/frontoffice/package.json .
+COPY --from=builder /web/frontoffice/node_modules ./node_modules
 
 EXPOSE 3000
 CMD ["node", "index.js"]
