--- a/web/backoffice/Dockerfile
+++ b/web/backoffice/Dockerfile
@@ -4,11 +4,16 @@ ARG BUILD_MODE
 
 COPY ./web /web
 
+RUN cd /web/frontoffice \
+ && npm install \
+ && npm run build \
+
+WORKDIR /buyer-app
+COPY --from=builder /web/frontoffice/build .
+
 RUN cd /web/backoffice \
  && npm install \
  && npm run build$BUILD_MODE
-
-FROM node:16-alpine
 
 WORKDIR /app
 COPY --from=builder /web/backoffice/build .
