--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -10,6 +10,11 @@ server {
     listen 80;
 
     location / {
+        root /buyer-app;
+        index index.html;
+    }
+
+    location /admin {
         proxy_pass http://plebeianmarketweb;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
