Build both front and backend store apps + serve both at nginx

--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -20,7 +20,7 @@ services:
   web:
     build:
       context: ./
-      dockerfile: web/backoffice/Dockerfile
+      dockerfile: web/Dockerfile
       args:
         - BUILD_MODE=-staging
     depends_on:
