--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:16-alpine AS builder
+FROM node:18-alpine AS builder
 
 ARG BUILD_MODE
 
@@ -6,14 +6,16 @@ COPY ./web /web
 
 RUN cd /web/frontoffice \
  && npm install \
- && npm run build \
-
-WORKDIR /buyer-app
-COPY --from=builder /web/frontoffice/build .
+ && npm run build
 
 RUN cd /web/backoffice \
  && npm install \
  && npm run build$BUILD_MODE
+
+FROM node:18-alpine
+
+WORKDIR /buyer-app
+COPY --from=builder /web/frontoffice/build .
 
 WORKDIR /app
 COPY --from=builder /web/backoffice/build .
