--- a/web/frontoffice/package.json
+++ b/web/frontoffice/package.json
@@ -2,24 +2,24 @@
   "name": "plebeianmarket-web",
   "version": "0.0.1",
   "devDependencies": {
-    "@sveltejs/kit": "^1.18.0",
+    "@sveltejs/kit": "^1.20.0",
     "autoprefixer": "10.x",
     "btc2fiat": "*",
-    "daisyui": "^2.51.6",
+    "daisyui": "^2.52.0",
     "eslint": "^8.41.0",
     "eslint-plugin-svelte3": "4.x",
     "nostr-tools": "^1.11.1",
     "npm-run-all": "4.x",
-    "postcss": "^8.4.23",
+    "postcss": "^8.4.24",
     "svelte": "^3.59.1",
-    "svelte-check": "^3.3.2",
+    "svelte-check": "^3.4.3",
     "svelte-markdown": "0.x",
     "svelte-meta-tags": "^2.7.2",
     "svelte-toasts": "1.x",
     "svelte-typewriter": "^3.1.6",
     "tailwindcss": "^3.3.2",
     "typescript": "^4.9.5",
-    "vite": "^4.3.8"
+    "vite": "^4.3.9"
   },
   "type": "module",
   "scripts": {
@@ -35,6 +35,8 @@
   },
   "dependencies": {
     "@sveltejs/adapter-static": "^2.0.2",
+    "bech32": "^2.0.0",
+    "buffer": "^6.0.3",
     "light-bolt11-decoder": "^3.0.0",
     "svelte-qr": "^1.0.0",
     "uuid": "^9.0.0"
