Reload items when adding media.

--- a/.env.test
+++ b/.env.test
@@ -14,3 +14,4 @@ SQLALCHEMY_DISABLE_POOLING=1
 BID_LAST_MINUTE_EXTEND=0
 WWW_BASE_URL=https://plebeian.market
 API_BASE_URL=http://api:5000
+API_BASE_URL_EXTERNAL=http://localhost:5000
