--- a/.env.dev
+++ b/.env.dev
@@ -13,3 +13,4 @@ DB_PASSWORD=plebpass
 SQLALCHEMY_DISABLE_POOLING=1
 WWW_BASE_URL=http://localhost:5173
 API_BASE_URL=http://api:5000
+API_BASE_URL_EXTERNAL=http://localhost:5000
