Reload items when adding media.

--- a/.env.test
+++ b/.env.test
@@ -13,3 +13,5 @@ DB_PASSWORD=plebpass
 SQLALCHEMY_DISABLE_POOLING=1
 BID_LAST_MINUTE_EXTEND=0
 WWW_BASE_URL=https://plebeian.market
+API_BASE_URL=http://api:5000
+API_BASE_URL_EXTERNAL=http://localhost:5000
