Make the website work when the user reloads a non-home page

--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -34,5 +34,6 @@ server {
     location / {
         root /buyer-app;
         index index.html;
+        try_files $uri $uri/ /index.html;
     }
 }
