Stay on pydantic 1, as v2 breaks lnurl.

--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -15,6 +15,7 @@ lnurl
 git+https://github.com/jeffthibault/python-nostr.git#egg=nostr
 psycopg2
 pycoin
+pydantic==1.10.4
 pyjwt
 pyqrcode
 python-dateutil
