--- a/.env.dev
+++ b/.env.dev
@@ -14,3 +14,4 @@ SQLALCHEMY_DISABLE_POOLING=1
 WWW_BASE_URL=http://localhost:5173
 API_BASE_URL=http://api:5000
 API_BASE_URL_EXTERNAL=http://localhost:5000
+BIRDWATCHER_BASE_URL=http://birdwatcher:6000
