--- a/.env.prod
+++ b/.env.prod
@@ -4,3 +4,4 @@ LOG_LEVEL=INFO
 LND_GRPC=plebeian-market.m.voltageapp.io:10009
 WWW_BASE_URL=https://plebeian.market
 API_BASE_URL=https://plebeian.market
+BIRDWATCHER_BASE_URL=http://birdwatcher:6000
