--- a/.env.test
+++ b/.env.test
@@ -15,3 +15,4 @@ BID_LAST_MINUTE_EXTEND=0
 WWW_BASE_URL=https://plebeian.market
 API_BASE_URL=http://api:5000
 API_BASE_URL_EXTERNAL=http://localhost:5000
+BIRDWATCHER_BASE_URL=http://birdwatcher:6000
