Save processed event IDs to disk.

--- a/.env.test
+++ b/.env.test
@@ -16,3 +16,4 @@ WWW_BASE_URL=https://plebeian.market
 API_BASE_URL=http://api:5000
 API_BASE_URL_EXTERNAL=http://localhost:5000
 BIRDWATCHER_BASE_URL=http://birdwatcher:6000
+PROCESSED_EVENT_IDS_FILENAME=processed_event_ids.txt
