--- a/.env.prod
+++ b/.env.prod
@@ -5,3 +5,4 @@ LND_GRPC=plebeian-market.m.voltageapp.io:10009
 WWW_BASE_URL=https://plebeian.market
 API_BASE_URL=https://plebeian.market
 BIRDWATCHER_BASE_URL=http://birdwatcher:6000
+PROCESSED_EVENT_IDS_FILENAME=/state/processed_event_ids.txt
