Fixing Dockerfile to build the shared app correctly

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -5,7 +5,7 @@ ARG BUILD_MODE
 COPY ./web /web
 
 RUN cd /web/shared \
- && npm install \
+ && npm install
 
 RUN cd /web/frontoffice \
  && npm install \
