--- a/web/frontoffice/package.json
+++ b/web/frontoffice/package.json
@@ -39,6 +39,7 @@
     "bech32": "^2.0.0",
     "buffer": "^6.0.3",
     "light-bolt11-decoder": "^3.0.0",
+    "svelte-lazy-loader": "^1.0.0",
     "svelte-qr": "^1.0.0",
     "uuid": "^9.0.0"
   }
