Extend auction duration on bids.

--- a/.env.staging
+++ b/.env.staging
@@ -6,3 +6,4 @@ WWW_BASE_URL=https://staging.plebeian.market
 API_BASE_URL=https://staging.plebeian.market
 BIRDWATCHER_BASE_URL=http://birdwatcher:6000
 PROCESSED_EVENT_IDS_FILENAME=/state/processed_event_ids.txt
+BID_ALWAYS_EXTEND_BY_MINUTES=1
