--- a/web/backoffice/package.json
+++ b/web/backoffice/package.json
@@ -7,20 +7,20 @@
     "autoprefixer": "10.x",
     "btc2fiat": "*",
     "daisyui": "^2.51.4",
-    "eslint": "^8.34.0",
+    "eslint": "^8.46.0",
     "eslint-plugin-svelte3": "4.x",
     "nostr-tools": "^1.8.1",
     "npm-run-all": "4.x",
-    "postcss": "8.x",
+    "postcss": "^8.4.27",
     "svelte": "3.x",
     "svelte-check": "^3.0.3",
     "svelte-markdown": "0.x",
     "svelte-meta-tags": "^2.6.5",
     "svelte-toasts": "1.x",
     "svelte-typewriter": "3.x",
-    "tailwindcss": "^3.2.7",
+    "tailwindcss": "^3.3.3",
     "typescript": "^4.9.5",
-    "vite": "^4.1.3"
+    "vite": "^4.4.7"
   },
   "type": "module",
   "scripts": {
