--- a/web/shared/package.json
+++ b/web/shared/package.json
@@ -44,6 +44,7 @@
 	"types": "./dist/index.d.ts",
 	"type": "module",
 	"dependencies": {
+		"btc2fiat": "^0.1.23",
 		"nostr-tools": "^1.12.1"
 	}
 }
