--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -53,6 +53,11 @@ services:
     volumes:
       - "/home/www/plebeian-market-secrets:/secrets"
     command: flask settle-btc-payments
+  lightning_payments_processor:
+    env_file: .env.staging
+    volumes:
+      - "/home/www/plebeian-market-secrets:/secrets"
+    command: flask lightning_payments_processor
   birdwatcher:
     env_file: .env.staging
     volumes:
