--- a/web/frontoffice/package.json
+++ b/web/frontoffice/package.json
@@ -2,16 +2,16 @@
   "name": "plebeianmarket-web",
   "version": "0.0.1",
   "devDependencies": {
-    "@sveltejs/kit": "^1.22.4",
-    "autoprefixer": "10.x",
-    "daisyui": "^3.5.1",
-    "eslint": "^8.46.0",
+    "@sveltejs/kit": "^1.24.1",
+    "autoprefixer": "^10.4.15",
+    "daisyui": "^3.6.5",
+    "eslint": "^8.48.0",
     "eslint-plugin-svelte3": "4.x",
     "nostr-tools": "^1.12.1",
     "npm-run-all": "4.x",
-    "postcss": "^8.4.27",
+    "postcss": "^8.4.29",
     "svelte": "^3.59.2",
-    "svelte-check": "^3.4.6",
+    "svelte-check": "^3.5.1",
     "svelte-meta-tags": "^2.8.0",
     "svelte-toasts": "1.x",
     "svelte-typewriter": "^3.1.6",
