--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
     build:
       context: ./
       dockerfile: ./api/Dockerfile
+    environment:
+      - APP=api
     image: plebeianmarket-api
     depends_on: [db]
     restart: on-failure
