Adding admin pubkeys to PM environments (#305)
* Remove debug

* Adding 3 admins to PM

* Update esling to last version

* Copy the config-pm file before building

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -4,6 +4,8 @@ ARG BUILD_MODE
 
 COPY ./web /web
 
+RUN mv /web/frontoffice/static/config-pm.json /web/frontoffice/static/config.json
+
 RUN cd /web/shared \
  && npm install
 
