Enabling CORS so other clients can use our badges / images

--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -24,6 +24,7 @@ server {
     }
 
     location / {
+        add_header Access-Control-Allow-Origin *;
         root /buyer-app;
         index index.html;
         try_files $uri $uri/ /index.html;
