--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -17,6 +17,7 @@ server {
     }
 
     location /api {
+        add_header Access-Control-Allow-Origin *;
         proxy_pass http://plebeianmarketapi;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
