Install geckodriver & Firefox.

--- a/.env.staging
+++ b/.env.staging
@@ -5,3 +5,4 @@ WWW_BASE_URL=https://staging.plebeian.market
 API_BASE_URL=https://staging.plebeian.market
 BIRDWATCHER_BASE_URL=http://birdwatcher:6000
 PROCESSED_EVENT_IDS_FILENAME=/state/processed_event_ids.txt
+GECKODRIVER_BINARY="/app/geckodriver"
