More changes for the Lightning payments support

--- a/ln_payments_processor/requirements.txt
+++ b/ln_payments_processor/requirements.txt
@@ -1,1 +1,25 @@
+base58
+bip39gen
+bleach
+btc2fiat
+boto3
+ecdsa
+email-validator
+flask
+flask-cors
+flask-migrate
+flask-sqlalchemy
+gunicorn
+lnurl
+git+https://github.com/jeffthibault/python-nostr.git#egg=nostr
+psycopg2
+pycoin
+pydantic==1.10.4
+pyjwt
+pyqrcode
+python-dateutil
+python-magic
+python-slugify
 requests
+requests_oauthlib
+secp256k1
