--- a/.env.dev
+++ b/.env.dev
@@ -15,3 +15,4 @@ API_BASE_URL=http://api:5000
 API_BASE_URL_EXTERNAL=http://localhost:5000
 BIRDWATCHER_BASE_URL=http://birdwatcher:6000
 PROCESSED_EVENT_IDS_FILENAME=processed_event_ids.txt
+LNDHUB_URL=https://ln.getalby.com
