--- a/.env.prod
+++ b/.env.prod
@@ -6,3 +6,4 @@ WWW_BASE_URL=https://plebeian.market
 API_BASE_URL=https://plebeian.market
 BIRDWATCHER_BASE_URL=http://birdwatcher:6000
 PROCESSED_EVENT_IDS_FILENAME=/state/processed_event_ids.txt
+LNDHUB_URL=https://ln.getalby.com
