Supporting payments with Lightning Network

--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -52,6 +52,11 @@ services:
     volumes:
       - "/home/www/plebeian-market-secrets:/secrets"
     command: flask settle-btc-payments
+  lightning-payments-processor:
+    env_file: .env.staging
+    volumes:
+      - "/home/www/plebeian-market-secrets:/secrets"
+    command: flask lightning-payments-processor
   birdwatcher:
     env_file: .env.staging
     volumes:
