--- a/.env.staging
+++ b/.env.staging
@@ -7,3 +7,4 @@ BIRDWATCHER_BASE_URL=http://birdwatcher:6000
 PROCESSED_EVENT_IDS_FILENAME=/state/processed_event_ids.txt
 VERIFIED_EXTERNAL_IDENTITIES_FILENAME=/state/verified_external_identities.txt
 GECKODRIVER_BINARY=/app/geckodriver
+LNDHUB_URL=https://ln.getalby.com
