--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -56,6 +56,7 @@ services:
     env_file: .env.staging
     volumes:
       - "/home/www/plebeian-market-secrets:/secrets"
+      - "./api:/app"
     command: flask lightning-payments-processor
   birdwatcher:
     env_file: .env.staging
