--- a/ln_payments_processor/requirements.txt
+++ b/ln_payments_processor/requirements.txt
@@ -7,6 +7,7 @@ ecdsa
 email-validator
 flask
 flask-cors
+flask-mail
 flask-migrate
 flask-sqlalchemy
 gunicorn
@@ -21,5 +22,4 @@ python-dateutil
 python-magic
 python-slugify
 requests
-requests_oauthlib
 secp256k1
