--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -35,6 +35,14 @@ services:
     volumes:
       - "./api:/app"
     command: flask settle-btc-payments
+  settle-lightning-payments:
+    depends_on:
+      api: # this is because in dev & test mode, the api is the one initializing the database, on start
+        condition: service_healthy
+    env_file: .env.dev
+    volumes:
+      - "./api:/app"
+    command: flask settle-lightning-payments
   birdwatcher:
     env_file: .env.dev
     ports:
