--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -7,6 +7,8 @@ services:
     env_file: .env.test
   settle-btc-payments:
     env_file: .env.test
+  settle-lightning-payments:
+    env_file: .env.test
   birdwatcher:
     env_file: .env.test
   test:
