Updating npm packages to the latest versions

--- a/web/backoffice/package.json
+++ b/web/backoffice/package.json
@@ -3,17 +3,17 @@
   "version": "0.0.1",
   "devDependencies": {
     "@sveltejs/adapter-node": "^1.2.0",
-    "@sveltejs/kit": "^1.22.4",
-    "autoprefixer": "10.x",
+    "@sveltejs/kit": "^1.25.1",
+    "autoprefixer": "^10.4.16",
     "btc2fiat": "*",
-    "daisyui": "^3.5.1",
-    "eslint": "^8.46.0",
+    "daisyui": "^3.8.3",
+    "eslint": "^8.50.0",
     "eslint-plugin-svelte3": "4.x",
-    "nostr-tools": "^1.8.1",
+    "nostr-tools": "^1.14.0",
     "npm-run-all": "4.x",
-    "postcss": "^8.4.27",
+    "postcss": "^8.4.31",
     "svelte": "3.x",
-    "svelte-check": "^3.0.3",
+    "svelte-check": "^3.5.2",
     "svelte-meta-tags": "^2.6.5",
     "svelte-toasts": "1.x",
     "svelte-typewriter": "3.x",
