--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,9 +1,9 @@
-FROM python:3.10-bullseye
+FROM python:3.12-slim-bullseye
 
 COPY ./api/requirements.txt /
 
 RUN apt-get update \
- && apt-get install -y curl \
+ && apt-get install -y curl git libpq-dev pkg-config gcc cmake python3-magic \
  && pip3 install -r /requirements.txt
 
 COPY ./api /app
