--- a/web/frontoffice/package.json
+++ b/web/frontoffice/package.json
@@ -2,10 +2,10 @@
   "name": "plebeianmarket-web",
   "version": "0.0.1",
   "devDependencies": {
-    "@sveltejs/kit": "^1.25.1",
+    "@sveltejs/kit": "^1.25.2",
     "autoprefixer": "^10.4.16",
     "daisyui": "^3.9.2",
-    "eslint": "^8.50.0",
+    "eslint": "^8.51.0",
     "eslint-plugin-svelte3": "4.x",
     "nostr-tools": "^1.13.1",
     "npm-run-all": "4.x",
@@ -38,7 +38,6 @@
     "buffer": "^6.0.3",
     "light-bolt11-decoder": "^3.0.0",
     "svelte-lazy-loader": "^1.0.0",
-    "svelte-qr": "^1.0.0",
-    "uuid": "^9.0.1"
+    "svelte-qr": "^1.0.0"
   }
 }
