--- a/web/shared/package.json
+++ b/web/shared/package.json
@@ -46,6 +46,7 @@
 	"dependencies": {
 		"btc2fiat": "^0.1.23",
 		"light-bolt11-decoder": "^3.0.0",
-		"nostr-tools": "^1.13.1"
+		"nostr-tools": "^1.13.1",
+		"uuid": "^9.0.1"
 	}
 }
