--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -9,6 +9,8 @@ services:
       - "/home/www/plebeian-market-relaydata:/app/strfry-db"
     ports:
       - "7777:7777"
+    networks:
+      - proxy
   api:
     healthcheck:
       test: ["CMD", "curl", "-f", "https://staging.plebeian.market/api/healthcheck"]
