--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -6,6 +6,10 @@ upstream plebeianmarketweb {
     server web:3000;
 }
 
+upstream plebeianmarketrelay {
+    server relay:7777;
+}
+
 server {
     listen 80;
 
@@ -19,6 +23,14 @@ server {
     location /api {
         add_header Access-Control-Allow-Origin *;
         proxy_pass http://plebeianmarketapi;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+    }
+
+    location /relay {
+        add_header Access-Control-Allow-Origin *;
+        proxy_pass http://plebeianmarketrelay;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
