--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -31,8 +31,11 @@ server {
     location /relay {
         add_header Access-Control-Allow-Origin *;
         proxy_pass http://plebeianmarketrelay;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
+        proxy_read_timeout 86400;
         proxy_redirect off;
     }
 
