--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -4,6 +4,13 @@ services:
   db:
     volumes:
       - "/home/www/plebeian-market-dbdata:/var/lib/postgresql/data"
+  relay:
+    volumes:
+      - "/home/www/plebeian-market-relaydata:/app/strfry-db"
+    ports:
+      - "7777:7777"
+    networks:
+      - proxy
   api:
     healthcheck:
       test: ["CMD", "curl", "-f", "https://staging.plebeian.market/api/healthcheck"]
