--- a/web/backoffice/package.json
+++ b/web/backoffice/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.1",
   "devDependencies": {
     "@sveltejs/adapter-node": "^1.2.0",
-    "@sveltejs/kit": "^1.25.1",
+    "@sveltejs/kit": "^1.27.0",
     "autoprefixer": "^10.4.16",
     "btc2fiat": "*",
-    "daisyui": "^3.9.2",
-    "eslint": "^8.50.0",
+    "daisyui": "^3.9.3",
+    "eslint": "^8.52.0",
     "eslint-plugin-svelte3": "4.x",
     "nostr-tools": "^1.13.1",
     "npm-run-all": "4.x",
@@ -16,10 +16,10 @@
     "svelte-check": "^3.5.2",
     "svelte-meta-tags": "^2.6.5",
     "svelte-toasts": "1.x",
-    "svelte-typewriter": "3.x",
+    "svelte-typewriter": "^3.1.7",
     "tailwindcss": "^3.3.3",
     "typescript": "^4.9.5",
-    "vite": "^4.4.11"
+    "vite": "^4.5.0"
   },
   "type": "module",
   "scripts": {
