--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -12,6 +12,7 @@ upstream plebeianmarketrelay {
 
 server {
     listen 80;
+    client_max_body_size 5M;
 
     location /admin {
         proxy_pass http://plebeianmarketweb;
