Use local relay in dev environment.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -55,4 +55,6 @@ services:
       - "6000:6000"
     volumes:
       - "./birdwatcher:/app"
+    networks:
+      - relay_network
     command: python main.py
