Save logs to file.

--- a/.env.prod
+++ b/.env.prod
@@ -1,6 +1,7 @@
 ENV=prod
 FLASK_APP=main
 LOG_LEVEL=INFO
+LOG_FILENAME=/state/pm.log
 WWW_BASE_URL=https://plebeian.market
 API_BASE_URL=https://plebeian.market
 BIRDWATCHER_BASE_URL=http://birdwatcher:6000
