--- a/.env.staging
+++ b/.env.staging
@@ -1,6 +1,7 @@
 ENV=staging
 FLASK_APP=main
 LOG_LEVEL=INFO
+LOG_FILENAME=/state/pm.log
 WWW_BASE_URL=https://staging.plebeian.market
 API_BASE_URL=https://staging.plebeian.market
 BIRDWATCHER_BASE_URL=http://birdwatcher:6000
