Call AUTO_CONFIGURE_SITE what it is.

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -3,6 +3,8 @@ version: '3.6'
 services:
   api:
     env_file: .env.test
+    environment:
+      - AUTO_CONFIGURE_SITE=1
   finalize-auctions:
     env_file: .env.test
   settle-btc-payments:
